chore: 子分支保持追踪到master分支

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,4 @@
 [submodule "WebpagePrinterHelper"]
 	path = WebpagePrinterHelper
 	url = https://github.com/zerlei/WebpagePrinterHelper.git
+	branch = master
