--- a/.gitmodules
+++ b/.gitmodules
@@ -1,4 +1,4 @@
 [submodule "WebpagePrinterHelper"]
 	path = WebpagePrinterHelper
 	url = https://github.com/zerlei/WebpagePrinterHelper.git
-	branch = master
+	branch = v2
