--- a/.gitignore
+++ b/.gitignore
@@ -1,34 +1,7 @@
-# Logs
-logs
-*.log
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
-pnpm-debug.log*
-lerna-debug.log*
 
-/webtool/node_modules
-/webtool/dist
-/webtool/dist-ssr
-*.local
-# Editor directories and files
-/webtool/.vscode/*
-/webtool/!.vscode/extensions.json
-.idea
-.DS_Store
-*.suo
-*.ntvs*
-*.njsproj
-*.sln
-*.sw?
-*.
-
-
-
-/server/build
-/server/.cache
-/server/uploads
-/server/.vscode
+build
+.cache
+.vscode
 
 
 /test/node_modules
