feat: add qt unit test for log.h

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,5 +3,7 @@ project(
   WebpagePrinterTool
   VERSION 0.1
   LANGUAGES CXX)
-add_subdirectory(src)
 add_subdirectory(docs)
+add_subdirectory(src)
+enable_testing()
+add_subdirectory(tests)
