--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-    "cmake.sourceDirectory": "${workspaceFolder}/Server-Browser"
+    "cmake.sourceDirectory": "/home/zerlei/git/WebpagePrinter"
 }
