chore:  好久没做了,先保存一下副本,再修改

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,6 @@
 {
-    "cmake.sourceDirectory": "/home/zerlei/git/WebpagePrinter"
+    "cmake.sourceDirectory": "/home/zerlei/git/WebpagePrinter",
+    "cSpell.words": [
+        "stdenv"
+    ]
 }
