feat: 添加了sqlite 支持

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -2,7 +2,11 @@ include("${CMAKE_SOURCE_DIR}/cmake/QtCommon.cmake")
 qt_add_executable(WebpagePrinterTool MANUAL_FINALIZATION ${PROJECT_SOURCES})
 
 target_sources(
-  WebpagePrinterTool PRIVATE main.cpp log.h # src/model/model.h # src/db/db.cpp
+  WebpagePrinterTool PRIVATE main.cpp 
+  log/log.cpp
+  # db/SqliteDb.cpp
+
+
 )
 target_link_libraries(WebpagePrinterTool PRIVATE Qt6::Core Qt6::Sql
                                                  Qt6::Widgets)
