--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -1,5 +1,24 @@
 include("${CMAKE_SOURCE_DIR}/cmake/QtCommon.cmake")
+
+
 qt_add_executable(TEST_LOG)
-target_sources(TEST_LOG PRIVATE TEST_log.cpp ../src/log.h)
+target_sources(TEST_LOG PRIVATE TEST_log.cpp  ../src/log/log.cpp)
 target_link_libraries(TEST_LOG PRIVATE Qt6::Test)
 add_test(NAME TEST_LOG COMMAND TEST_LOG)
+
+qt_add_executable(TEST_CONFIG)
+target_compile_definitions(TEST_CONFIG PRIVATE
+    BASE_DIR="/.WebpagePrinter_TESTCONFIG/"
+)
+target_sources(TEST_CONFIG PRIVATE TEST_InitConfig.cpp)
+target_link_libraries(TEST_CONFIG PRIVATE Qt6::Test)
+add_test(NAME TEST_CONFIG COMMAND TEST_CONFIG)
+
+qt_add_executable(TEST_SqliteDb)
+target_compile_definitions(TEST_SqliteDb PRIVATE
+    BASE_DIR="/.WebpagePrinter_TESTSqliteDb/"
+)
+target_sources(TEST_SqliteDb PRIVATE TEST_SqliteDb.cpp ../src/db/SqliteDb.cpp ../src/log/log.cpp)
+target_link_libraries(TEST_SqliteDb PRIVATE Qt6::Test Qt6::Sql)
+add_test(NAME TEST_SqliteDb COMMAND TEST_SqliteDb)
+
