feat: 完成了基本的开发 TODO 单元测试
- 删掉了之前旧的内容

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -3,15 +3,22 @@ qt_add_executable(WebpagePrinterTool MANUAL_FINALIZATION ${PROJECT_SOURCES})
 
 target_sources(
   WebpagePrinterTool PRIVATE main.cpp 
-  log/log.cpp
-  printer/Printer.cpp
-  # db/SqliteDb.cpp
+  connector/HttpServer.cpp
+  connector/MsgStation.cpp
+  connector/WebsocketServer.cpp
+  connector/WebsocketClient.cpp
 
+  db/SqliteDb.cpp
+
+  log/log.cpp
+
+  model/ModelsJson.cpp
+
+  printer/Printer.cpp
+  printer/WebRender.cpp
 
 )
 target_link_libraries(WebpagePrinterTool PRIVATE Qt6::Core Qt6::Sql
-                                                 Qt6::Widgets Qt6::HttpServer Qt6::WebSockets Qt6::PrintSupport Qt6::WebEngineWidgets)
+                                                 Qt6::Widgets Qt6::HttpServer Qt6::WebSockets Qt6::PrintSupport Qt6::WebEngineWidgets Qt6::Pdf)
 include_directories()
-# target_include_directories(WebpagePrinterTool
-#                            PRIVATE $ENV{QT6_BASE_PATH}/include)
 qt_finalize_executable(WebpagePrinterTool)
