--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,6 +3,7 @@ project(
   WebpagePrinterTool
   VERSION 0.1
   LANGUAGES CXX)
+set(CMAKE_CXX_STANDARD 23)
 if(NOT DEFINED ONLY_EXE)
   set(ONLY_EXE
       OFF
