CI/CD:  add github aciton for pages

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,16 +4,29 @@ project(
   VERSION 0.1
   LANGUAGES CXX)
 set(CMAKE_CXX_STANDARD 23)
-if(NOT DEFINED ONLY_EXE)
-  set(ONLY_EXE
+if(NOT DEFINED EXE)
+  set(EXE
       OFF
-      CACHE BOOL "JUST BUILD EXE")
+      CACHE BOOL)
 endif()
-add_subdirectory(src)
-if(NOT ONLY_EXE)
+if(NOT DEFINED DOCS)
+  set(DOCS
+      OFF
+      CACHE BOOL)
+endif()
+if(NOT DEFINED TESTS)
+  set(TESTS
+      OFF
+      CACHE BOOL)
+endif()
+if(EXE)
+  add_subdirectory(src)
+endif()
+if(DOCS)
   add_subdirectory(docs)
+endif()
+if(TESTS)
   enable_testing()
   include(CTest)
   add_subdirectory(tests)
 endif()
-
