--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -2,7 +2,7 @@ name: Deploy
 on:
   push:
     branches:
-      - v2   # 只有推送 tag 时才触发，适合发布版本
+      - v2 # 只有推送 tag 时才触发，适合发布版本
 jobs:
   build-and-deploy:
     runs-on: ubuntu-latest
@@ -10,7 +10,7 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
-        
+
       - uses: nixbuild/nix-quick-install-action@v33
         with:
           nix_conf: |
@@ -39,13 +39,13 @@ jobs:
           # except any version with the key that is the same as the `primary-key`
           purge-primary-key: never
       - name: build docs
-        run: nix develop |
-             cmake --preset docs
-             cmake --build build --target docs
+        run: |
+          nix develop
+          cmake --preset docs
+          cmake --build build --target docs
       - name: Deploy
         uses: cloudflare/wrangler-action@v3
         with:
           apiToken: ${{ secrets.CLOUDFLARE_API_TOKEN }}
           accountId: ${{ secrets.CLOUDFLARE_ACCOUNT_ID }}
           command: pages deploy build/docs/html --project-name=webpageprint
-      
