--- a/.github/workflows/win.yaml
+++ b/.github/workflows/win.yaml
@@ -23,24 +23,26 @@ jobs:
           arch: 'win64_msvc2022_64'
           cache: "true"
           modules: 'qthttpserver qtwebengine qtpdf qtwebsockets qtpositioning qtwebchannel'
+      #  MSVC / Visual Studio 的生成器是多配置生成器：
+      # 它一次性生成 Debug / Release / 其他配置。
+      # 你在 cmake 配置阶段设置 CMAKE_BUILD_TYPE 是没用的，CMake 会提示“未使用该变量”。
       - name: build with cmake
         run: |
           cmake --preset win-rel --debug-find-pkg=Qt6WebEngineCore
-          cmake --build build
+          cmake --build build --config Release
       - name: deploy qt-runtime
         run: |
-          powershell windeployqt.exe --release build\src\WebpagePrinterTool.exe
-        shell: cmd
+          powershell windeployqt.exe --release build\src\Release\WebpagePrinterTool.exe
 
       - name: download helper
         run: |
          powershell Invoke-WebRequest -Uri https://github.com/zerlei/WebpagePrinterHelper/releases/download/v1.0.0/dist.zip -OutFile ./dist.zip
-         powershell Expand-Archive -Path ./dist.zip -DestinationPath ./build/src
-         powershell Remove-Item -Path ./build/src/dist -NewName "wwwroot"
+         powershell Expand-Archive -Path ./dist.zip -DestinationPath ./build/src/Release
+         powershell Remove-Item -Path ./build/src/Release/dist -NewName "wwwroot"
 
       - name: Package artifact
         run: |
-          powershell Compress-Archive -Path build\src\* -DestinationPath ./WebpagePrinterTool-win-x64.zip
+          powershell Compress-Archive -Path build\src\Release\* -DestinationPath ./WebpagePrinterTool-win-x64.zip
       
       - name: Create GitHub Release
         uses: softprops/action-gh-release@v2
